force-app/main/default/objects/Booked_Date__c/Booked_Date__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the booked dates for all the individual rooms.</description>
    <label>Booked Date</label>
    <nameField>
        <displayFormat>BD-{00000}</displayFormat>
        <label>Booked Dates</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booked Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>