force-app/main/default/objects/Booked_Date__c/fields/Available_Slots__c.field-meta.xml
<CustomField>
    <fullName>Available_Slots__c</fullName>
    <description>This field will store the available slots of the room for that perticular date</description>
    <formula>Hotel_Product__r.Total_Quantity__c  -  Booked_Slots__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>