force-app/main/default/objects/Booked_Date__c/fields/Booked_Slots__c.field-meta.xml
<CustomField>
    <fullName>Booked_Slots__c</fullName>
    <description>This Field Store the value of the Booked Slots. And Value of this field is Updated on the basis of the Record Creation of the Booked Dates.</description>
    <label>Booked Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>