force-app/main/default/objects/Booked_Date__c/fields/Hotel_Product__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotel Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Booked Dates</relationshipLabel>
    <relationshipName>Booked_Dates</relationshipName>
    <type>Lookup</type>
</CustomField>