force-app/main/default/objects/Booked_Date__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hotel_Product__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Booked_Slots__c</columns>
    <columns>Available_Slots__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>